--- a/manifest.json
+++ b/manifest.json
@@ -12,14 +12,14 @@
     },
     "content_scripts": [
       {
-        "matches": ["*://play.pokemonshowdown.com/*"],
+        "matches": ["*://play.pokemonshowdown.com/*", "https://localhost.psim.us/*"],
         "js": ["content.js"]
       }
     ],
     "web_accessible_resources": [
       {
         "resources": ["tooltip.js"],
-        "matches": ["*://play.pokemonshowdown.com/*"]
+        "matches": ["*://play.pokemonshowdown.com/*", "https://localhost.psim.us/*"]
       }
     ],
     "action": {
